@@ -520,6 +520,13 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      Collection of template firewall objects now includes an object
+      for PIX 50X (501 and 506)
+    </p>
+  </li>
+
 </ul>
 
 
