@@ -1,3 +1,8 @@
+2010-10-07  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* refs #336 "Need template for PIX firewall"; added template for
+	PIX 50X (501 and 506)
+
 2010-10-06  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* FWWindow.cpp (FWWindow::showIntroDialog): fixed compile problem
@@ -8,7 +13,7 @@
 	web site when they run the GUI for the first few times. The dialog
 	is shown instead of the Time of the day dialog. Switching to the
 	tip of the day after 5 starts.
-	
+
 	* RoutingCompiler_pix.cpp (emptyRDstOrRItf::processNext): fixed
 	#1783 "PIX routing entries require interface, but PIX config will
 	compile without interface in Routing rule". Policy compiler for PIX
